# OpenGL-CPP-Template

./: .gitmodules  CMakeLists.txt
ProjectName/src/: main.cpp
